nowar changed dates

--- a/en/_posts/2022-03-21-nowar.md
+++ b/en/_posts/2022-03-21-nowar.md
@@ -21,15 +21,19 @@ I believe that every gesture counts and all of them compound. Here's what we've 
 
 ## How is [Nozbe][n] sanctioning Russia and Belarus?
 
-[We are cutting off Nozbe for Russia and Belarus as a result of their attack on Ukraine](https://nozbe.com/blog/nozbe-cut-off-for-russia-belarus/) today, on Friday, March 18 2022.
+[We have cut off Nozbe for Russia and Belarus as a result of their attack on Ukraine](https://nozbe.com/blog/nozbe-cut-off-for-russia-belarus/) as of last Friday, March 18 2022.
 
 ![{{ page.title }} 2](/img/nowar-2.jpg)
 
 This was a tough decision. I have many friends in Russia. As a company we've invested a lot in Russia by translating our home page and app to Russian. We've had lots of Nozbe customers from Russia over the years.
 
-However we can't be bystanders here. Together with many companies cutting their ties with Russia, we're joining them and sanctioning Russia in the only way we can.
+However we can't be bystanders here. Together with the EU, UN and many companies cutting their ties with Russia, we're joining them and sanctioning Russia in the only way we can.
 
-We're not refunding Russian customers. I've calculated all the money our Russian customers have paid us over the last year and today I'm sending it to the [Ukraine relief efforts by PAH](https://www.pah.org.pl/wplac/?form=ukraina).
+We're not refunding Russian customers. With today's sanctions on Russian banks it would have been impossible technically anyway.
+
+Symbolically, I've calculated all the money our Russian customers have paid us over the last year and today I'm sending it to the [Ukraine relief efforts by PAH](https://www.pah.org.pl/wplac/?form=ukraina) and to smaller ogranizations that organize things for Ukrainian refugees.
+
+I'm hoping for the future when this war is over and our Russian customers will be back and then I'll re-enable them access to Nozbe, also respecting their paid-for [Nozbe][n] status as of March 18, 2022. I sincerely hope we can be friends again in a free world.
 
 * [My full statement in Russian 🇷🇺](https://nozbe.com/ru/)
 * [English 🇺🇸 translation of my statement](https://nozbe.com/blog/nozbe-cut-off-for-russia-belarus/)
@@ -39,9 +43,7 @@ We're not refunding Russian customers. I've calculated all the money our Russian
 
 As a Pole and a brother to Ukraine 🇺🇦 I'm helping in many ways, trying to get relief efforts organized in my home town, on the border, procuring supplies for Ukrainian refugees and helping them find a shelter in our country of Poland 🇵🇱 that already took more than 2 Million people in. [#UnitedWithUkraine](/ukraine/)
 
-In two weeks we'll be having a [Nozbe Reunion](/reunion/) in the city of Lublin, which is only 80km away from the Ukrainian border and we'll be also involved in helping in any way we can.
-
-![{{ page.title }} 3](/img/nowar-3.jpg)
+In a week we'll be having a [Nozbe Reunion](/reunion/) in the city of Lublin, which is only 80km away from the Ukrainian border and we'll be also involved in helping in any way we can.
 
 ## What I'm doing to stay sane?
 
@@ -52,6 +54,12 @@ In the following months my plan is to keep working to promote [Nozbe][n], finall
 > My goal is to enjoy the little things I have now while being mindful that I can lose it all in a blink of an eye.
 
 This war motivates me even more to appreciate the things I have that bring me joy every day.
+
+## P.S. Please watch a message from Arnold Schwarzenegger for Russians
+
+I think, Arnie said it best, how I feel about cutting off my Russian friends and customers. I feel awful about this, but just like him, I'm hoping the Russian nation will wake up and stop this war:
+
+{% include video.html id="fWClXZd9c78" %}
 
 
 [n]: https://michael.gratis/nozbe
