--- a/en/_posts/2022-03-23-white.md
+++ b/en/_posts/2022-03-23-white.md
@@ -5,13 +5,13 @@ cover: "white.jpg"
 
 # I’m a privileged white man - and what am I going to do about it?
 
-Things that happened over the past few years that made me realize something I never thought was true. I’m a privileged, white, straight male. It’s a fact that was hard for me to fully embrace first but now I see how it’s true in today's world. Now, the question is, what do I do about it?
+Things that happened over the past few years that made me realize something I never thought was true. **I belong to the most privileged part of our society because I'm a white and straight male.** It’s a fact that was hard for me to fully embrace first but now I see how it’s true in today's world. The question is, what do I do about it?
 
 <!--More-->
 
 ![{{ page.title }}](/img/{{ page.cover }})
 
-## Born in Eastern Europe and Communist Poland, privilege wasn't my thing.
+## Born in Eastern Europe and Communist Poland, privilege wasn't something I witnessed
 
 As I was born in the cold-war era, where Poland was ruled by the USSR, the word *privilege* wasn't on my mind. It was quite the contrary. My family struggled to make ends meet. My parents didn't have nor want any connections with the ruling party. We were living in a modest flat in a big block on the outskirts of a small town of Gdynia.
 
@@ -21,31 +21,31 @@ As Poland joined the European Union and NATO, as I learned English, German and R
 
 I wasn't surrounded by the same homogeneous people anymore.
 
-Slowly but surely I realized how privileged I am.
+Slowly but surely, in many situations, I realized how privileged I am.
 
 ## I'm white…
 
-As I traveled more I realized that I've come to take for granted that people treat me well. In the beginning I thought it was because [I'm a very nice person](/weak/). And that's partially true.
+As I traveled more I realized that I've come to take for granted that people treat me well. In the beginning I thought it was because [I'm a very nice person](/weak/). And that's only partially true.
 
 However I started noticing how other people, equally nice, but not as white as me, are not treated with the same respect as me. Sometimes it's just a look, a gesture, or a comment. And it pains me to see this.
 
-I saw with my own eyes how on occasions white people treated black people or latinos as second-class citizens. And that happened on quite a few occasions in many countries I've been to. And I'm sure I also misbehaved because of my implied white privilege.
+I saw with my own eyes how on occasions white people treated black people or latinos as second-class citizens. And that in quite a few countries I've been to. And I'm sure I also misbehaved because of my implied white privilege.
 
 No, I'm not writing this to feel sorry for myself because frankly that would be ridiculous. I'm writing this to start being more mindful and conscious about it.
 
-> I am an active anti-racist.
+> I am becoming an active anti-racist.
 
 ## I'm a male…
 
 Raised in a patriarchal and catholic country, only now, having a power-woman as a wife and three beautiful daughters, I start realizing how women have it hard. That it's a men's world. And it shouldn't be.
 
-Enough with patriarchal family model, age-old phrases that put women dependent on men, stupid blondie jokes and other ways of showing males dominate females.
+Enough with patriarchal family model, age-old phrases that put women dependent on men, stupid blondie jokes and other ways of showing how males dominate females.
 
 I see how women are being treated, how men dismiss them or speak worse of them or how men want to decide everything.
 
 I want a better future for my wife and my daughters. I want them to be power women who can conquer the world!
 
-> I am an active feminist.
+> I am becoming an active feminist.
 
 ## I'm straight…
 
@@ -53,7 +53,7 @@ I have a wife and kids. I'm as straight as they get. I've always been fascinated
 
 Now that I have close friends who are gay, I see how tough they have it. How the [Catholic Church](/catholic/) excludes them, even if they believe in God. How the society labels them. How some communities actively fight *them*. Like if they were a disease or something.
 
-> I'm an active LGBTQ supporter.
+> I'm becoming an active LGBTQ supporter.
 
 ## What should I do with my privilege?
 
@@ -61,9 +61,9 @@ First off, just be mindful of my privilege and start using it to benefit those l
 
 I need to mind my language. There are so many phrases I'm used to saying that I must never say again as they are very condescending or insulting.
 
-Also, to systematically change things. In our [salary formula](https://NoOffice.org/pay/) there's no place for a *sex* variable. At [Nozbe][n] we have women holding important positions in the company. But we still haven't found at least one woman programmer to join our dev team. We need to try harder on that front. And in the future I hope our company to be more diverse when it comes to the colors of our skins.
+Also, to systematically change things. In our [salary formula](https://NoOffice.org/pay/) there's no place for a *sex* variable. At [Nozbe][n] we have women holding important positions in the company. But we still haven't found at least one woman programmer to join our dev team. We need to try harder on that front. And in the future I hope our company to be more diverse when it comes to the color of our skins.
 
-Anyway, I think to start is to be aware. [Not to block it](/basecamp/). Not to dismiss this as *wokeness*. When you're in a position of privilege it's easy to reject talking about problems at work because these issues don't concern you.
+Anyway, I think to start is to be aware. Not to block it. Not to dismiss this as *wokeness*. When you're in a position of privilege it's easy to [reject talking about problems at work](/basecamp/) because these issues don't concern you.
 
 > I am [staying woke](https://en.wikipedia.org/wiki/Woke).
 
