--- a/en/_posts/2022-03-25-now220325.md
+++ b/en/_posts/2022-03-25-now220325.md
@@ -23,7 +23,7 @@ Getting ready for next week’s [Nozbe Reunion](/reunion/) in the beautiful city
 
 * Preparing the launch of the [#NoOffice book](https://NoOffice.org/) - it’ll start in April with the official book launch in June
 * Improving my home office yet again by adding an M1 MacBook Air as the new Mac to the mix.
-* Writing here on this blog - [about Ukraine](/nowar/), [privilege](/white/) and [inaction](/nothing/). I’m on a roll recently with my writing!
+* Writing here on this blog - about [Ukraine](/nowar/), [privilege](/white/), [respect](/adults/) and [inaction](/nothing/). I’m on a roll recently with my writing!
 
 ## …and privately:
 
