--- a/en/_posts/2022-04-07-this-time.md
+++ b/en/_posts/2022-04-07-this-time.md
@@ -15,7 +15,7 @@ I’m a big fan of [Seth Godin](https://seths.blog) and his podcast, [Akimbo](ht
 
 Just after coming from the [Nozbe Reunion](/reunion/) as I was doing my [quarterly review](/podcast-73/) I decided to plan the new upcoming 3-month-period differently. To hopefully get better results.
 
-As I wrote down the ideas and shared them with the team, almost everyone was very skeptical: *Do we need to do this? Does it make sense? I don't like it… We tried some of it before…*
+As I wrote down the ideas and shared them with the team, almost everyone was very skeptical: *Do we need to do this now? Does it make sense to do it this quarter?*
 
 This also made me doubt myself. Maybe I pushed too far, maybe I am crazy. Maybe I'm just not smart enough to do it.
 
