--- a/en/_posts/2022-04-28-markdown.md
+++ b/en/_posts/2022-04-28-markdown.md
@@ -24,9 +24,9 @@ A few weeks back [Derek Sivers wrote why he prefers writing everything in plain 
 
 I love Markdown. It's a kind of formatting that makes the plain text file look better and understandable to converters or exporters. Here's an example paragraph:
 
-```
+<code>
 I'm the founder of **Nozbe** which you can find [here](https://nozbe.com/) - it's *free*!
-```
+</code>
 
 This paragraph reads well. You instinctively see which text is **highlighted** and where is a link to a web site. It's because:
 
