ipadonly.net to com

--- a/en/_posts/2013-08-08-author.md
+++ b/en/_posts/2013-08-08-author.md
@@ -19,7 +19,7 @@ I've been a long-time [Seth Godin][sg] fan and what he's always been preaching o
 
 ## Self-publishing the bestseller
 
-The decision to self-publish our [#iPadOnly](http://ipadonly.net) book was the best one for us. Now, thanks to our fans, [Nozbe][n] users and you, my fantastic blog readers, it became a bestseller and we're working on promoting the book as much as we can. We received lots of positive emails, lots of skeptical ones as well (more on that later) and we're getting ready for phase two - keep the momentum going.
+The decision to self-publish our [#iPadOnly](http://ipadonly.com) book was the best one for us. Now, thanks to our fans, [Nozbe][n] users and you, my fantastic blog readers, it became a bestseller and we're working on promoting the book as much as we can. We received lots of positive emails, lots of skeptical ones as well (more on that later) and we're getting ready for phase two - keep the momentum going.
 
 ## Digital books are great for self-publishing era
 
@@ -27,11 +27,11 @@ You can get our book in several formats: iBooks, Amazon Kindle and paperback. Ha
 
 ## From a book to an #iPadOnly movement
 
-In the coming months you'll see how we'll be publishing our book in more languages, adding more [#iPadOnly videos](http://ipadonly.net/videos), a regular podcast and so much more. Clearly we're only scratching a surface there and people crave for more information on #iPadOnly and we'll be happily giving it to them.
+In the coming months you'll see how we'll be publishing our book in more languages, adding more [#iPadOnly videos](http://ipadonly.com/videos), a regular podcast and so much more. Clearly we're only scratching a surface there and people crave for more information on #iPadOnly and we'll be happily giving it to them.
 
 ## Changing people's lives one book sale at a time
 
-From all the [reviews](http://ipadonly.net/blog) we got so far, people are intrigued by the #iPadOnly movement, they are changing habits, trying new things, checking out the apps we recommended... the book resonates with them. The best part, we deeply believe that by publishing this book we're changing the world a little, changing old habits, questioning assumptions... we're making a small dent in the universe... and it feels great.
+From all the [reviews](http://ipadonly.com/blog) we got so far, people are intrigued by the #iPadOnly movement, they are changing habits, trying new things, checking out the apps we recommended... the book resonates with them. The best part, we deeply believe that by publishing this book we're changing the world a little, changing old habits, questioning assumptions... we're making a small dent in the universe... and it feels great.
 
 ## You don't need permission to change the world
 
@@ -47,8 +47,8 @@ This is what I want to leave with today - **choose yourself and change the world
 [i]: /ipadonly
 [e]: /how-i-use-evernote
 [d]: http://db.tt/kD7Liux
-[io]: http://ipadonly.net/
-[iob]: http://ipadonly.net/blog/bestseller
+[io]: http://ipadonly.com/
+[iob]: http://ipadonly.com/blog/bestseller
 [ap]: http://www.augustopinaud.com
 [iom]: /ipadonly
 [sg]: http://www.sethgodin.com/
