--- a/en/_posts/2014-01-14-2013.md
+++ b/en/_posts/2014-01-14-2013.md
@@ -53,7 +53,7 @@ Here's to a great 2014!
 [Dropbox]: http://db.tt/kD7Liux
 [Evernote]: /how-i-use-evernote
 [iPadOnly]: /ipadonly
-[#iPadOnly]: http://ipadonly.net/
+[#iPadOnly]: http://ipadonly.com/
 [Nozbe]: http://www.nozbe.com/
 [Productive! Magazine]: http://www.productivemag.com/
 [Productive! Show]: /productive_show
