--- a/en/_posts/2014-01-22-biz.md
+++ b/en/_posts/2014-01-22-biz.md
@@ -46,7 +46,7 @@ Keep growing, keep doing what I love, keep growing my team and helping them grow
 [Dropbox]: http://db.tt/kD7Liux
 [Evernote]: /how-i-use-evernote
 [iPadOnly]: /ipadonly
-[#iPadOnly]: http://ipadonly.net/
+[#iPadOnly]: http://ipadonly.com/
 [Nozbe]: http://www.nozbe.com/
 [Productive! Magazine]: http://www.productivemag.com/
 [Productive! Show]: /productive_show
