--- a/en/_posts/2014-01-27-5-loves.md
+++ b/en/_posts/2014-01-27-5-loves.md
@@ -40,7 +40,7 @@ That's it. This is my ultimate answer. These "5 loves" of my work determine that
 [Dropbox]: http://db.tt/kD7Liux
 [Evernote]: /how-i-use-evernote
 [iPadOnly]: /ipadonly
-[#iPadOnly]: http://ipadonly.net/
+[#iPadOnly]: http://ipadonly.com/
 [Nozbe]: http://www.nozbe.com/
 [Productive! Magazine]: http://www.productivemag.com/
 [Productive! Show]: /productive_show
