--- a/en/_posts/2014-01-31-mac.md
+++ b/en/_posts/2014-01-31-mac.md
@@ -51,7 +51,7 @@ Today I work mostly on my iPad and just recently I bought the MacBook Pro as my 
 [Dropbox]: http://db.tt/kD7Liux
 [Evernote]: /how-i-use-evernote
 [iPadOnly]: /ipadonly
-[#iPadOnly]: http://ipadonly.net/
+[#iPadOnly]: http://ipadonly.com/
 [Nozbe]: http://www.nozbe.com/
 [Productive! Magazine]: http://www.productivemag.com/
 [Productive! Show]: /productive_show
