--- a/en/_posts/2014-02-04-7nozbe.md
+++ b/en/_posts/2014-02-04-7nozbe.md
@@ -45,7 +45,7 @@ After 7 years of working on Nozbe I look at the future and I don't see an end. I
 [Dropbox]: http://db.tt/kD7Liux
 [Evernote]: /how-i-use-evernote
 [iPadOnly]: /ipadonly
-[#iPadOnly]: http://ipadonly.net/
+[#iPadOnly]: http://ipadonly.com/
 [Nozbe]: http://www.nozbe.com/
 [Productive! Magazine]: http://www.productivemag.com/
 [Productive! Show]: /productive_show
