--- a/en/_posts/2014-02-07-pm17.md
+++ b/en/_posts/2014-02-07-pm17.md
@@ -30,7 +30,7 @@ As always, your favorite productivity magazine is sponsored by [Nozbe][n] - your
 [Evernote]: /how-i-use-evernote
 [Nozbe]: http://www.nozbe.com/
 [s]: http://www.nozbe.com/signup
-[#iPadOnly]: http://ipadonly.net/
+[#iPadOnly]: http://ipadonly.com/
 [Productive! Magazine]: http://www.productivemag.com/
 [Productive! Show]: /show
 [Twitter]: http://twitter.com/MSliwinski
