--- a/en/_posts/2014-03-05-applecar.md
+++ b/en/_posts/2014-03-05-applecar.md
@@ -70,7 +70,7 @@ Oh, and here's the drag race between Model S and M5:
 [Evernote]: /how-i-use-evernote
 [Nozbe]: http://www.nozbe.com/
 [s]: http://www.nozbe.com/signup
-[#iPadOnly]: http://ipadonly.net/
+[#iPadOnly]: http://ipadonly.com/
 [Productive! Magazine]: http://www.productivemag.com/
 [Productive! Show]: /show
 [Twitter]: http://twitter.com/MSliwinski
