--- a/en/_posts/2014-03-28-phoneapp.md
+++ b/en/_posts/2014-03-28-phoneapp.md
@@ -39,7 +39,7 @@ Yes, now I truly believe that a phone is no longer a device, it's an app. Yes, i
 [Evernote]: /how-i-use-evernote
 [Nozbe]: http://www.nozbe.com/
 [s]: http://www.nozbe.com/signup
-[#iPadOnly]: http://ipadonly.net/
+[#iPadOnly]: http://ipadonly.com/
 [Productive! Magazine]: http://www.productivemag.com/
 [Productive! Show]: /show
 [Twitter]: http://twitter.com/MSliwinski
