--- a/en/_posts/2014-04-19-catholic.md
+++ b/en/_posts/2014-04-19-catholic.md
@@ -54,7 +54,7 @@ Well, I honestly don't care. This is a belief system I was raised in and now as 
 [Evernote]: /how-i-use-evernote
 [Nozbe]: http://www.nozbe.com/
 [s]: http://www.nozbe.com/signup
-[#iPadOnly]: http://ipadonly.net/
+[#iPadOnly]: http://ipadonly.com/
 [Productive! Magazine]: http://www.productivemag.com/
 [Productive! Show]: /show
 [Twitter]: http://twitter.com/MSliwinski
