--- a/en/_posts/2014-05-07-my-last-pc.md
+++ b/en/_posts/2014-05-07-my-last-pc.md
@@ -55,7 +55,7 @@ It is amazing that products that have been on sale for such a short period of ti
 [Evernote]: /how-i-use-evernote
 [Nozbe]: http://www.nozbe.com/
 [s]: http://www.nozbe.com/signup
-[#iPadOnly]: http://ipadonly.net/
+[#iPadOnly]: http://ipadonly.com/
 [Productive! Magazine]: http://www.productivemag.com/
 [Productive! Show]: /show
 [Twitter]: http://twitter.com/MSliwinski
