--- a/en/_posts/2022-06-16-forty3.md
+++ b/en/_posts/2022-06-16-forty3.md
@@ -35,13 +35,13 @@ What you might not know is that until now I was Nozbe and Nozbe was me. My busin
 
 Well, now I chose to finally "separate" myself from the company and convert Nozbe into a [company with limited liability](https://en.wikipedia.org/wiki/Limited_liability_company) which in Polish is called: [spółka z o.o.](https://en.wikipedia.org/wiki/Spółka_z_ograniczoną_odpowiedzialnością)
 
-This means a new chapter for Nozbe. I will remain the majority owner and will hired myself as the CEO. In practice not much will change, but I feel like this symbolic "separation" of me and the company will help me focus working on the business more.
+This means a new chapter for Nozbe. I will remain the majority owner and will hire myself as the CEO. In practice not much will change, but I feel like this symbolic "separation" of me and the company will help me focus working on the business more.
 
 I want Nozbe to remain a "boutique company" with a worldwide impact. In 5 years I want both the team size to grow to around 40-50 people (2x) and the revenue at least 10x. We must embrace the shift from being just a [productivity](/productivity/) company to being a true team collaboration app.
 
 Working on business means not only finding new ways of selling our software, but also internally on making the team better. I must make sure everyone's better than me for the position they were hired to do. And I must provide them all with as much resources as possible to be able to perform at the highest level.
 
-This also means I finally need to hire a world-class VP of Marketing. Until today I was the designated and self-proclaimed chief of marketing at the company. I need to finally fire myself from this role to focus on my main role as the CEO. This will be a long journey but I'm hoping to ultimately find someone much better than me in this role in about a year or so.
+This also means I finally need to hire a world-class VP of Marketing. Until today I was the designated and self-proclaimed chief of marketing at the company. I need to finally fire myself from this role to focus on my main role as the CEO. This will be a long journey but I'm hoping to ultimately find someone much better than me for this role in about a year or so.
 
 I still believe that with Nozbe I can help millions of people get organized and work together in a better way!
 
@@ -55,7 +55,7 @@ A movement where [adults are being treated as adults by other adults](/adults/) 
 
 > Work is not a place to go, but a thing to do.
 
-## Choice 3 - appreciate every day what I have!
+## Choice 3 - appreciate every day I have!
 
 I want to end this post with some stoicism. Looking at the global pandemic and the war in Ukraine, I appreciate even more what I have. And that it can be taken away from me in any moment. Just like [5 Million people](/john/) who died of [covid](/covid/) and [Millions of Ukrainians who lost their homes](/nowar/) because of the crazy Russian dictator.
 
