adding siri shortcuts

--- a/pl/_posts/2022-06-17-dziennik.md
+++ b/pl/_posts/2022-06-17-dziennik.md
@@ -26,9 +26,9 @@ Skrót ten nie wymaga żadnej zewnętrznej aplikacji. Oto co się dzieje po jeg
 
 Poniżej do pobrania skrót po polsku i po angielsku. Zapraszam do pobierania zupełnie za darmo. Jest to standardowy Skrót Siri, więc możesz go modyfikować dowolnie do Twoich potrzeb, jeśli chcesz:
 
-### [Dziennik - skrót po Polsku]()
+### [Dziennik - skrót po Polsku](https://www.icloud.com/shortcuts/1a67dc3998554aca9cd18bc026fd91df)
 
-### [Journal Basic - shortcut in English]()
+### [Journal Basic - shortcut in English](https://www.icloud.com/shortcuts/5fb5caf55e744b6189d53876bd799ba3)
 
 ## Znasz angielski? Mam bardziej zaawansowane skróty!
 
