--- a/pl/_posts/2022-06-17-dziennik.md
+++ b/pl/_posts/2022-06-17-dziennik.md
@@ -30,6 +30,10 @@ Poniżej do pobrania skrót po polsku i po angielsku. Zapraszam do pobierania zu
 
 ### [Journal Basic - shortcut in English](https://www.icloud.com/shortcuts/5fb5caf55e744b6189d53876bd799ba3)
 
+Jesteś osobą wierzącą, która potrzebuje motywację do codziennej modlitwy? Chcesz aby po zrobieniu dziennika skrót pokazał Ci słowo na dzisiaj? Pobierz poniższy skrót, z dodaną [opcją czytania Pisma Świętego na dzisiaj](/pl/czytanie/):
+
+### [Dziennik i Pismo - skrót po Polsku](https://www.icloud.com/shortcuts/723037047ec845a2b33294f1ac825a54)
+
 ## Znasz angielski? Mam bardziej zaawansowane skróty!
 
 Ten skrót to owoc wielu lat zabawy skrótami Siri dla potrzeb pisania dziennika, który praktycznie codziennie piszę od 2016 roku.
