--- a/pl/_posts/2022-06-17-dziennik.md
+++ b/pl/_posts/2022-06-17-dziennik.md
@@ -34,6 +34,10 @@ Jesteś osobą wierzącą, która potrzebuje motywację do codziennej modlitwy? 
 
 ### [Dziennik i Pismo - skrót po Polsku](https://www.icloud.com/shortcuts/723037047ec845a2b33294f1ac825a54)
 
+## Zacznij pisać dziennik od dziś! Wyzwanie dla Ciebie: #DziennikSiri
+
+Jeśli chcesz regularnie pisać dziennik, zacznij teraz! Po prostu pobierz jeden z tych Skrótów i wypełnij pierwszy wpis z dziennika. Kiedy już to zrobisz, wrzuć na Twittera informację, że Ci się udało. Najlepiej oznacz mnie `@MSliwinski` i dodaj hashtag `#DziennikSiri` - zachęcam Cię do regularnego pisania w dzienniku i do dostosowywania sobie mojego skrótu do własnych potrzeb!
+
 ## Znasz angielski? Mam bardziej zaawansowane skróty!
 
 Ten skrót to owoc wielu lat zabawy skrótami Siri dla potrzeb pisania dziennika, który praktycznie codziennie piszę od 2016 roku.
