updates and now for summer

--- a/en/_posts/2022-07-05-fckptn.md
+++ b/en/_posts/2022-07-05-fckptn.md
@@ -16,6 +16,14 @@ This page are my regular updates on the state of the [Russia's terrorist attack 
 
 ## FCKPTN Updates
 
+### July 8 - Russian army is looting Ukraine
+
+The city of [Mariupol](https://en.wikipedia.org/wiki/Mariupol) has been completely destroyed by Russian invaders. Prior to the war, 450k people were living there. Now it's less than 100k. Not only have the buildings been completely damaged but apparently [Russian invaders have been looting the city museums](https://twitter.com/anneapplebaum/status/1545150814464970753). Just like the Nazi Germany in the WWII.
+
+### July 7 - G20 Summit starts with Russia's foreign minister participating
+
+It's hard for me to imagine that [Sergey Lavrov](https://en.wikipedia.org/wiki/Sergey_Lavrov) - Russia's minister of foreign affairs can actively participate in a summit along with other leaders - while Russia is attacking Ukraine and, by proxy, their countries. He should be handcuffed and sent to [The Hague](https://en.wikipedia.org/wiki/International_Court_of_Justice) if you ask me.
+
 ### July 5 - Finland and Sweden are joining NATO
 
 As a direct result of the threat of Russia attacking other countries beyond Ukraine, Finland and Sweden have started their process of joining NATO, especially after Turkey said YES to the expansion on June 29. When will NATO expand to Ukraine to show Putin a true middle finger?
