fixes to index and now

--- a/en/_posts/2022-07-08-now220708.md
+++ b/en/_posts/2022-07-08-now220708.md
@@ -11,7 +11,7 @@ It’s summer time! This means for me family vacations and some deep work sessio
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-> Note: this is my ["now page"](/now) update where I share with you what I'm up to now.
+> Note: this is my ["now page"](/now) update where I share what I'm up to now.
 
 ## Working on [Nozbe][n]:
 
