Journaling updates and iMagazine on journaling

--- a/en/_posts/2022-07-05-fckptn.md
+++ b/en/_posts/2022-07-05-fckptn.md
@@ -22,7 +22,7 @@ The city of [Mariupol](https://en.wikipedia.org/wiki/Mariupol) has been complete
 
 ### July 7 - G20 Summit starts with Russia's foreign minister participating
 
-It's hard for me to imagine that [Sergey Lavrov](https://en.wikipedia.org/wiki/Sergey_Lavrov) - Russia's minister of foreign affairs can actively participate in a summit along with other leaders - while Russia is attacking Ukraine and, by proxy, their countries. He should be handcuffed and sent to [The Hague](https://en.wikipedia.org/wiki/International_Court_of_Justice) if you ask me.
+It's hard for me to imagine that [Sergey Lavrov](https://en.wikipedia.org/wiki/Sergey_Lavrov) - Russia's minister of foreign affairs can actively participate in a summit along with other leaders - while Russia is attacking Ukraine and, by proxy, their countries. He should be handcuffed and sent to [The Hague](https://en.wikipedia.org/wiki/International_Court_of_Justice) if you ask me. [He eventually left the Summit as he was completely ignored](https://twitter.com/Flash43191300/status/1545316656808853504).
 
 ### July 5 - Finland and Sweden are joining NATO
 
