--- a/pl/_posts/2022-06-17-dziennik.md
+++ b/pl/_posts/2022-06-17-dziennik.md
@@ -7,7 +7,7 @@ redirect_from:
 
 # Dziennik - skrót Siri do codziennego pisania w pamiętniku
 
-W Lipcowym felietonie do [iMagazine](/pl/imagazine/) opisuję moją metodę na codzienne pisanie w dzienniku. Tłumaczę, dlaczego warto to robić i jakie najlepsze metody znalazłem na to w mądrych książkach. Poniżej załączam już sam skrót Siri do pobrania za darmo:
+W [lipcowym felietonie do iMagazine](/pl/codziennik/) opisuję moją metodę na codzienne pisanie w dzienniku. Tłumaczę, dlaczego warto to robić i jakie najlepsze metody znalazłem na to w mądrych książkach. Poniżej załączam już sam skrót Siri do pobrania za darmo:
 
 <!--More-->
 
@@ -26,23 +26,24 @@ Skrót ten nie wymaga żadnej zewnętrznej aplikacji. Oto co się dzieje po jeg
 
 Poniżej do pobrania skrót po polsku i po angielsku. Zapraszam do pobierania zupełnie za darmo. Jest to standardowy Skrót Siri, więc możesz go modyfikować dowolnie do Twoich potrzeb, jeśli chcesz:
 
-### [Dziennik - skrót po Polsku](https://www.icloud.com/shortcuts/1a67dc3998554aca9cd18bc026fd91df)
+### [Dziennik - skrót po Polsku](https://www.icloud.com/shortcuts/9f21769ea4554204b822450f6fac9de1)
 
-### [Journal Basic - shortcut in English](https://www.icloud.com/shortcuts/5fb5caf55e744b6189d53876bd799ba3)
+### [Journal Basic - shortcut in English](https://www.icloud.com/shortcuts/9072bc23feee4c01b833150dd2733375)
 
-Jesteś osobą wierzącą, która potrzebuje motywację do codziennej modlitwy? Chcesz aby po zrobieniu dziennika skrót pokazał Ci słowo na dzisiaj? Pobierz poniższy skrót, z dodaną [opcją czytania Pisma Świętego na dzisiaj](/pl/czytanie/):
+### Wersje skrótu
 
-### [Dziennik i Pismo - skrót po Polsku](https://www.icloud.com/shortcuts/723037047ec845a2b33294f1ac825a54)
+Powyżej do pobrania są najnowsze wersje mojego skrótu. A oto historia:
 
-## Zacznij pisać dziennik od dziś! Wyzwanie dla Ciebie: #DziennikSiri
+- Wersja 2.0 (29 sierpnia 2022) - Usprawnienie: jak nic nie wpiszesz i wciśniesz ENTER, to się nie doda pusty wpis do dziennika oraz nowa funkcja: opcja w menu „Otwórz dziennik" otwiera dziennik w domyślnym edytorze markdown (polecam darmowy Runestone lub płatny iA Writer)
+- Wersja 1.0 (17 czerwca 2022) - pierwsza wersja skrótu: [Dziennik 1.0 - skrót po Polsku](https://www.icloud.com/shortcuts/1a67dc3998554aca9cd18bc026fd91df), [Journal Basic 1.0 - shortcut in English](https://www.icloud.com/shortcuts/5fb5caf55e744b6189d53876bd799ba3) oraz [z opcją czytania Pisma Świętego na dzisiaj](/pl/czytanie/), czyli [Dziennik i Pismo 1.0](https://www.icloud.com/shortcuts/723037047ec845a2b33294f1ac825a54).
 
-Jeśli chcesz regularnie pisać dziennik, zacznij teraz! Po prostu pobierz jeden z tych Skrótów i wypełnij pierwszy wpis z dziennika. Kiedy już to zrobisz, wrzuć na Twittera informację, że Ci się udało. Najlepiej oznacz mnie `@MSliwinski` i dodaj hashtag `#DziennikSiri` - zachęcam Cię do regularnego pisania w dzienniku i do dostosowywania sobie mojego skrótu do własnych potrzeb!
+## Chcesz poznać co to jest "dziennik w trakcie pracy" i być bardziej produktywnym?
 
-## Znasz angielski? Mam bardziej zaawansowane skróty!
+Od lat nie tylko piszę dziennik rano i wieczorem, ale także przy tej okazji planuję następny dzień i unikam rozpraszaczy dzięki metodzie pisania dziennika w trackie pracy. [Kliknij jeśli chcesz poznać bardziej rozbudowaną wersję tego Skrótu Siri wspartą o te metody - dostępne oczywiście za darmo!](/pl/planowanie)
 
-Ten skrót to owoc wielu lat zabawy skrótami Siri dla potrzeb pisania dziennika, który praktycznie codziennie piszę od 2016 roku.
+## Znasz angielski? Poznaj moją całą historię pisania dziennika!
 
-[Na moim blogu angielskim poznasz całą historię](/journal/) oraz pobierzesz mój bardziej zaawansowany skrót, [korzystający dodatkowo z aplikacji iA Writer i wspierający planowanie dnia](/journal20/).
+Ten skrót to owoc wielu lat zabawy skrótami Siri dla potrzeb pisania dziennika, który praktycznie codziennie piszę od 2016 roku. [Na moim blogu angielskim poznasz całą historię](/journal/).
 
 [n]: https://michael.gratis/nozbe_pl
 [np]: https://michael.gratis/nozbepersonal_pl
