--- a/en/_posts/2022-09-19-now220919.md
+++ b/en/_posts/2022-09-19-now220919.md
@@ -15,19 +15,20 @@ I’m back at work after many weeks of vacation time! Excited to finish this yea
 
 ## Working on [Nozbe][n]:
 
-* I’m working on a completely new Marketing Strategy based on what we’ve learned this past year
-* I’m figuring out how to write Nozbe USP (Unique Selling Proposition) in a way that’s really meaningful and a little weird
+* I’m working on a completely new Marketing Strategy based on what we’ve learned this past year ✅
+* I’m figuring out how to write Nozbe USP (Unique Selling Proposition) in a way that’s really meaningful and a little weird 🤪
 * Nozbe is finally an LLC (Limited Liability Company, in Polish: spółka z ograniczoną odpowiedzialnością) and this also means many administrative tasks!
 
 ## …and when I can, I'm also:
 
 * I’ve just published a brand new [Journaling and Planning](/journal) Siri Shortcut for everyone to use - [also in Polish](/pl/planowanie)
-* I’m postponing finishing off the [No Office book](https://NoOffice.org/) for next year. No time for it now.
+* I’m postponing finishing off the [No Office book](https://NoOffice.org/) for next year. No time for it now. Need to focus working on [Nozbe][n].
 
 ## …and privately:
 
 * I’m trying to get in a better shape. I’ve resumed my triathlon trainings and I’m on a pretty strict [slow carb diet](/slow-carb-diet) now.
 * I’m getting ready to travel for next [Nozbe Reunion](/reunion) - this time in Szczecin!
+* My middle daughter - Emilia - turns 10 today. Now my girls are 13, 10 and 6! They are growing too fast!
 
 
 [n]: https://michael.gratis/nozbe
