--- a/en/_posts/2022-09-27-airpods.md
+++ b/en/_posts/2022-09-27-airpods.md
@@ -13,7 +13,9 @@ When the [AirPods Pro](https://apple.com/airpods-pro) launched two years ago, I 
 
 ## AirPods 1 vs AirPods 2 - is it worth the upgrade?
 
-I tested my friend’s AirPods 2 and compared to mine and if your generation 1 AirPods Pro are working great, keep using them. I’m planning to stick with mine. Contrary to Apple’s marketing claims, the NC and the sound is not much different. At least I couldn’t hear it. Oh, and now you can adjust volume on the AirPods. I was using the [Apple Watch](/applewatch) for that.
+I tested my friend’s AirPods 2 and compared to mine and if your generation 1 AirPods Pro are working great, keep using them. I’m planning to stick with mine. Contrary to Apple’s marketing claims, the NC and the sound is not much different. At least I couldn’t hear it.
+
+Oh, and now you can adjust volume on the AirPods. I was using the [Apple Watch](/applewatch) for that.
 
 ## AirPods 2 case is a big upgrade!
 
@@ -30,5 +32,13 @@ I suggest when you order your AirPods Pro via Apple online store, you get a free
 ## When I leave house, I make sure I have my [iPhone](/mini13) in my right pocket and my AirPods Pro in my left pocket!
 
 This way I can listen to the music or [podcasts](/noofficefm) or [audiobooks](/reading/) anytime when I’m out and about. Especially when I’m shopping and don’t want to be disturbed, putting these on is just glorious.
+
+## Devil's Advocate: MKBHD says they're a significant upgrade!
+
+After I wrote my short review, I saw this video by Marques and he's convincing everyone that they in fact sound much better. [Also one of my Twitter followers reports it](https://twitter.com/mr_iwy/status/1577907815213056000).
+
+{% include video.html id="f3DfJxvkN-8" %}
+
+I just checked and my AirPods Pro are almost 3 years old (bought them on Nov 4, 2019!) and I use them every single day. Maybe I should get them?
 
 [n]: https://michael.gratis/nozbe
